2009-07-28
	*  clean "file of case" widget when project is closed.

2009-07-09
	*  "show case with memo only", correct some mismatch in Rd files.

2009-06-17
	* AddToFileCategory() can add multiple files to multiple categories at one time.

2009-06-17
	* RGtk2 (>=2.12.8), thanks Gaua for feedback.

2009-06-12
	* Improve ShowFileProperty function.
	* Fix bug of "Add Anno" button.
	* Fix bug of countAnchorsWithFileName()
	* New function of Query.

2009-06-11
	* "Show last coded file" in popup menu of Files Tab.
	* Revision of "Find a word" menu according to new method of
	highlighting coding.
	
2009-06-10
	* change GetFileId() according change of 2009-06-05.
	
2009-06-06
	* use font from "font setting" to set font of journal widget.

2009-06-05
	* When select multiple file categories, "files of this category"
	shows the intersect of files from these categories.
	
	
2009-06-03
	* use gcombox rather than gtext to set colors in settings Tab.
	
2009-05-31
	* set default coder name to username of OS.
	* Add number of files in the title of retrieved codings widget and
	similarly revision of ExportCodings().
	* upgrade database structure to version "0.1.8" (Old version of
	RQDA does not work with new *.rqda for the attributes). NOTE: add
	status column to caseAttr and fileAttr tables.
	
2009-05-30
	* New function of ExportCodings() for exporting codings to a html file.
	* Other minor improvements.

2009-05-29
	* new function of Annotation() and "Add Ann" button.
	* "Hightlight all codings" moved to popup menu.
	* "Highlight codings with memo" popup menu.
	* Merge AttributesWidget.R with Attributes.R, annotation.R with
	CodesFun.R,GUIHandler.R with root_gui.R
	* Revise HL_Case(),Mark case and Unmark case buttons accordingly.
	* Revise MarkCodeFun() accodingly, so insert code label as mark
	after data is written to database and delete unused code label too
	(when new and old code are overlapped).
		
2009-05-28
	* new function of countAnchorsWithFileName(), different way to do