@@ -1,3 +1,6 @@
+2009-08-01
+	* Add "Close all codings" button. 
+
 2009-07-28
 	*  clean "file of case" widget when project is closed.
 
